--- a/my-react-app/src/components/Modals/ModalAdd/Style/modalGroup.css
+++ b/my-react-app/src/components/Modals/ModalAdd/Style/modalGroup.css
@@ -1,3 +1,4 @@
+
 .modal_group
 {
   margin-top: 30px;
@@ -14,4 +15,26 @@
 .combobox
 {
   z-index: 1;
+}
+.active_content
+{
+	margin-left: px;
+    margin-top: 20px;
+	padding: 5px;
+
+	
+	box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	
+}
+.active_content2
+{
+	margin-right: 1000px;
+	margin-left: px;
+	padding: 5px;
+	margin-bottom: 5px;
+	
+	box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+	
 }
